After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692829 - new Btrfs support causes build failure on Solaris
new Btrfs support causes build failure on Solaris
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.35.x
Other Solaris
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
: 693508 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-01-29 19:57 UTC by Sean McGovern
Modified: 2013-02-10 17:23 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sean McGovern 2013-01-29 19:57:07 UTC
gmake[4]: Entering directory `/BUILD/glib/gio'
  CC       libgio_2_0_la-gfile.lo
/SOURCES/glib-2.35.4/gio/gfile.c: In function 'btrfs_reflink_with_progress':
/SOURCES/glib-2.35.4/gio/gfile.c:2945:3: error: implicit declaration of function '_IOW' [-Werror=implicit-function-declaration]
/SOURCES/glib-2.35.4/gio/gfile.c:2945:24: error: expected expression before 'int'
cc1: some warnings being treated as errors
Comment 1 Sean McGovern 2013-02-10 03:57:25 UTC
*** Bug 693508 has been marked as a duplicate of this bug. ***